BL-688 Fix alignment for search form and Library Search header

--- a/app/assets/stylesheets/partials/_header.scss
+++ b/app/assets/stylesheets/partials/_header.scss
@@ -192,6 +192,7 @@ nav ul.navbar li.nav-btn.active a {
 }
 
 .red-navbar a#catalog_header {
+	margin-left: -30px;
 	font-family: "PT Sans";
   text-decoration: underline;
 }
@@ -211,6 +212,21 @@ nav ul.navbar li.nav-btn.active a {
 	font-size: 1.5em;
 }
 
-#search-navbar .container {
-	margin: 0 20%;
+#search-form-container, .path-links {
+	width: 100%;
+
+    /* Firefox */
+    display: -moz-box;
+    -moz-box-pack: center;
+    -moz-box-align: center;
+
+    /* Safari and Chrome */
+    display: -webkit-box;
+    -webkit-box-pack: center;
+    -webkit-box-align: center;
+
+    /* W3C */
+    display: box;
+    box-pack: center;
+    box-align: center;
 }
